--- a/desafios/desafio02/cordel-moderno.html
+++ b/desafios/desafio02/cordel-moderno.html
@@ -27,7 +27,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -64,7 +64,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -96,8 +96,8 @@
         Deixe que Deus interprete.
     </section>
     <footer>
-        <p>site criado por <a href="https://gustavoguanabara.github.io">Guanabara</a> pelo curso em video</p>
-        <p>aluno: <a href="https://github.com/Mateuslucs" target="_blank">Mateus Lucas</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io">Guanabara</a> pelo curso em video</p>
+        <p>aluno - <a href="https://github.com/Mateuslucs" target="_blank">Mateus Lucas</a></p>
     </footer>
 </body>
 </html>
