--- a/exercicios/tabelas/tab02.html
+++ b/exercicios/tabelas/tab02.html
@@ -10,6 +10,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table {
+            position: relative;
             border-collapse: collapse;
             width: 500px;
         }
@@ -17,10 +18,27 @@
             background-color: gray;
             color: white;
         }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+        th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
         td, th {
             border: 1px solid black;
             padding: 8px;
             text-align: center;
+        }
+        tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+        .num {
+            text-align: right;
         }
         tfoot {
             background-color: gray;
@@ -31,16 +49,125 @@
 <body>
     <h1>tabelas grandes</h1>
     <table>
+        <caption>população das Unidades fedarativas</caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">População</th>
         </thead>
 
         <tbody>
             <tr>
                 <td>São paulo</td>
-                <td>44.320.349</td>
+                <td class="num">41.262.199</td>
             </tr>
             <tr>
-                <td>Rio de janeiro</td>
-                <td>17
+                <td>Minas Gerais</td>
+                <td class="num">19 597 330</td>
+            </tr>
+            <tr>
+                <td> Rio de Janeiro</td>
+                <td class="num">15 989 929</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 016 906</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">10 444 526</td>
+            </tr>
+            <tr>
+                <td> Rio Grande do Sul</td>
+                <td class="num">10 693 929</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">8 796 448</td>
+            </tr>        
+
+            <tr>
+                <td>Ceará</td>
+                <td class="num">8 452 381</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">7 581 051</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">6 248 436</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">6 003 788</td>
+            </tr>
+            <tr>
+                <td> Maranhão</td>
+                <td class="num">6 574 789</td>
+            </tr>
+            <tr>
+                <td> Amazonas</td>
+                <td class="num">3 483 985</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">3 514 952</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">3 766 528</td>
+            </tr>
+            <tr>
+                <td> Mato Grosso</td>
+                <td class="num">3 035 122</td>
+            </tr>
+            <tr>
+                <td> Rio Grande do Norte</td>
+                <td class="num">3 168 027</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3 120 494</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3 118 360</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">2 570 160</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 449 024</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2 068 017</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1 562 409</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1 383 445</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">733 559</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">669 526</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">450 479</td>
+            </tr>
+            <tfoot>
+                <th scope="row">Total</th>
+                <td>00000</td>
+            </tfoot>
+        </tbody>
+    </table>        
