--- a/exercicios/tabelas/desafio-tabela2.html
+++ b/exercicios/tabelas/desafio-tabela2.html
@@ -4,32 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tabela</title>
+    <title>desafio02</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
         table {
             border-collapse: collapse;
-            width: 300px;
+            width: 400px;
         }
         td {
             border: 1px solid black;
             padding: 10px;
             text-align: center;
         }
-
     </style>
 </head>
 <body>
-    <h1>mesclagem de tabelas</h1>
     <table>
         <tr>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
         </tr>
         <tr>
+            <td rowspan="4">C</td>
             <td>D</td>
             <td>E</td>
             <td>F</td>
@@ -41,8 +36,11 @@
         </tr>
         <tr>
             <td>J</td>
-            <td>K</td>
             <td>L</td>
+            <td>M</td>
+        </tr>
+        <tr>
+            <td colspan="4">N</td>
         </tr>
     </table>
 </body>
