--- a/exercicios/tabelas/desafio-tabela3.html
+++ b/exercicios/tabelas/desafio-tabela3.html
@@ -24,14 +24,14 @@
         <caption>Filmes favoritos</caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nome</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nome</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana maria santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -50,7 +50,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Aminésia</td>
