--- a/exercicios/iframe/ex03.html
+++ b/exercicios/iframe/ex03.html
@@ -24,6 +24,6 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, assumenda necessitatibus. Quos, animi! Recusandae laboriosam odio fugiat quibusdam, rem repudiandae vel earum iste nesciunt eius distinctio a, placeat sint. Sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati dolorem delectus molestias tenetur error minima exercitationem hic quia ratione adipisci similique maxime nulla necessitatibus possimus maiores, corrupti asperiores quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur impedit quas minus eum molestias velit facere nulla beatae, a amet voluptate veritatis, omnis officiis voluptates ullam enim sint repellat aliquid! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis dicta soluta quisquam esse excepturi facere mollitia doloribus, at autem molestiae tempora sunt tenetur ullam ducimus laborum cum nihil omnis pariatur!</p>
 
-    <iframe src="" id="tela" name="frame"></iframe>
+    <iframe srcdoc="<h1>Escolha uma das opcões acima</h1>" id="tela" name="frame"></iframe>
 </body>
 </html>
