--- a/desafios/desafio03/index.html
+++ b/desafios/desafio03/index.html
@@ -11,14 +11,14 @@
 <body>
     <main>
         <section id="celular">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela" id="tela" scolling="no"></iframe>
         </section>
         <section id="rede">
-            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> </br>
-            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> </br>
-            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> </br>
-            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> </br>
-            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> </br> 
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> </br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> </br>
+            <a href="git-hub.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> </br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> </br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> </br> 
         </section>
     </main>
 </body>
