--- a/exercicios/ex08/ex08-html.html
+++ b/exercicios/ex08/ex08-html.html
@@ -43,7 +43,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h4><a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank">Veja o curso completo</a></h4>
     <div id="voltar">
-        <a href="ex08.html"><img src="imagens/voltar.png" id="voltar" alt=""></a>
+        <a href="ex08.html"><img src="../imagens/voltar.png" id="voltar" alt=""></a>
     </div>
 </body>
 </html>
