--- a/exercicios/ex08/ex08-js.html
+++ b/exercicios/ex08/ex08-js.html
@@ -43,7 +43,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h4><a href="https://www.youtube.com/playlist?list=PLntvgXM11X6pi7mW0O4ZmfUI1xDSIbmTm" target="_blank">Veja o curso completo</a></h4>
     <div id="voltar">
-        <a href="ex08.html"><img src="imagens/voltar.png" id="voltar" alt=""></a>
+        <a href="ex08.html"><img src="../imagens/voltar.png" id="voltar" alt=""></a>
     </div>
 </body>
 </html>
