--- a/exercicios/ex08/ex08-python.html
+++ b/exercicios/ex08/ex08-python.html
@@ -39,11 +39,11 @@
     </style>
 </head>
 <body>
-    <h1>hardware</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iT6E92Kt38o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h4><a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank">Veja o curso completo</a></h4>
+    <h1>PYTHON</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h4><a href="https://www.youtube.com/playlist?list=PLvE-ZAFRgX8hnECDn1v9HNTI71veL3oW0" target="_blank">Veja o curso completo</a></h4>
     <div id="voltar">
-        <a href="ex08.html"><img src="imagens/voltar.png" id="voltar" alt=""></a>
+        <a href="ex08.html"><img src="../imagens/voltar.png" id="voltar" alt=""></a>
     </div>
 </body>
 </html>
