--- a/exercicios/ex08/ex08.html
+++ b/exercicios/ex08/ex08.html
@@ -31,10 +31,10 @@
 <body>
     <h1>Videos legais para assistir</h1>
     <ul>
-        <li><a href="ex08-hard.html"><img src="imagens/thumb-hardware.png"/></a></li>
-        <li><a href="ex08-html.html"><img src="imagens/thumb-html.png"/></a></li>
-        <li><a href="ex08-js.html"><img src="imagens/thumb-js.png"/></a></li>
-        <li><a href="ex08-python.html"><img src="imagens/thumb-python.png"/></a></li>
+        <li><a href="ex08-hard.html"><img src="../imagens/thumb-hardware.png"/></a></li>
+        <li><a href="ex08-html.html"><img src="../imagens/thumb-html.png"/></a></li>
+        <li><a href="ex08-js.html"><img src="../imagens/thumb-js.png"/></a></li>
+        <li><a href="ex08-python.html"><img src="../imagens/thumb-python.png"/></a></li>
     </ul>
 </body>
 </html>
