--- a/exercicios/media queries/ex01/ex01.html
+++ b/exercicios/media queries/ex01/ex01.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>01</title>
+    <link rel="stylesheet" href="estilo/tela.css" media="screen">
+    <link rel="stylesheet" href="estilo/impressora.css" media="print">
 </head>
 <body>
-    <h1>media queries</h1>
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar media queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptatum omnis quisquam voluptates, odio unde ullam ipsam exercitationem praesentium, sint amet iste est ex eius ipsum dignissimos rerum? Voluptatem, facilis!,Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi error, delectus beatae quod nostrum ab est deserunt, reprehenderit dolore facilis voluptatum quae odit corporis et similique cupiditate tenetur deleniti nemo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi corrupti ea hic consectetur delectus quidem saepe, magni rerum facilis ipsam nulla, sapiente quibusdam iusto nobis. A temporibus ullam doloremque nemo!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quibusdam facilis veniam, quos quo veritatis amet illo commodi vel voluptatibus sint aut dicta autem fugiat beatae fugit! Vitae, quam aspernatur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus optio alias itaque non assumenda est, maxime commodi quaerat quas accusamus, illum dolor autem sint! Itaque sapiente sunt dolore doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consequuntur alias odit reiciendis officiis, ad recusandae ullam laborum in minima nihil dicta maxime facere tempore libero voluptate excepturi quos omnis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur voluptatum omnis quisquam voluptates, odio unde ullam ipsam exercitationem praesentium, sint amet iste est ex eius ipsum dignissimos rerum? Voluptatem, facilis!,Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi error, delectus beatae quod nostrum ab est deserunt, reprehenderit dolore facilis voluptatum quae odit corporis et similique cupiditate tenetur deleniti nemo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi corrupti ea hic consectetur delectus quidem saepe, magni rerum facilis ipsam nulla, sapiente quibusdam iusto nobis. A temporibus ullam doloremque nemo!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quibusdam facilis veniam, quos quo veritatis amet illo commodi vel voluptatibus sint aut dicta autem fugiat beatae fugit! Vitae, quam aspernatur! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus optio alias itaque non assumenda est, maxime commodi quaerat quas accusamus, illum dolor autem sint! Itaque sapiente sunt dolore doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consequuntur alias odit reiciendis officiis, ad recusandae ullam laborum in minima nihil dicta maxime facere tempore libero voluptate excepturi quos omnis.
+            </p>
+        </article>
+    </main>
 </body>
 </html>
 
