--- a/exercicios/media queries/ex05/index.html
+++ b/exercicios/media queries/ex05/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>media query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/tablet-note.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
         <span class="material-symbols-outlined" id="menu" onclick="menu()">menu</span>
@@ -32,6 +33,13 @@
         </article>
     </main>
     <script>
+        function mudouTamanho(){
+            if(innerWidth >= 768){
+                itens.style.display = "block";
+            }else {
+                itens.style.display = "none";
+            }
+        }
         function menu() {
             let menu = document.getElementById("itens");
             if(menu.style.display == "none"){
